fix(_app.sass): update scrollbar styles for cross-browser compatibility

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -1,17 +1,13 @@
-
-
-//? Importe de carpetas y arcchivos SASS
+//? Importes
 @import '_variables'
-
 @import '_landingPage'
-
-//? Mixins
 @import '_mixinsBtn'
 
 /*
-    ? La conversión del 62.5% hace que la fuente adopte ese porcentaje del tamaño real, es decir, de 16px toma 10px,
-    ?esto permite que sea viable usar la unidad de medida 'rem', donde 1rem es igual a 10px y .1rem es igual a 1px.
-    todo    16px*0.625 = 10px*/
+        ? La conversión del 62.5% hace que la fuente adopte ese porcentaje del tamaño real, es decir, de 16px toma 10px,
+        ?esto permite que sea viable usar la unidad de medida 'rem', donde 1rem es igual a 10px y .1rem es igual a 1px.
+        todo    16px*0.625 = 10px
+    */
 html
     margin: 0
     padding: 0
@@ -19,4 +15,33 @@ html
     box-sizing: border-box
     font-family: $font-family
     background: #FCFCF8
+
+    // WebKit (Chrome, Edge, Brave, Safari, Opera)
+    &::-webkit-scrollbar
+        width: 1rem
+        padding: .4rem
+
+    &::-webkit-scrollbar-track
+        background: linear-gradient(
+            to bottom,
+            #FCFCF8 0%,
+            #FCFCF8 30%,
+            #EADFDE 60%,
+            #D3BDBA 100%
+        )
+
+    &::-webkit-scrollbar-thumb
+        border-radius: 10px
+        background-color: #702B21
+        transition: $transition-slow
+
+    &::-webkit-scrollbar-thumb:hover
+        background: #32130F
+        transition: $transition-slow
+
+// Firefox (solo colores sólidos)
+@-moz-document url-prefix()
+    html
+        scrollbar-width: auto
+        scrollbar-color: #702B21 #FCFCF8
 
